Single-sourcing common slides pt3

--- a/site/training/developer-fundamentals/learning-to-run-tests.qmd
+++ b/site/training/developer-fundamentals/learning-to-run-tests.qmd
@@ -73,39 +73,9 @@ Already logged in and refreshed this module? Click [{{< fa chevron-right >}}]() 
 
 :::
 
-### Log in
-
-1. Log in to check your access:
-
-:::: {.flex .flex-wrap .justify-around}
-
-::: {.w-50-ns .tc}
-
-[Log in to JupyterHub]({{< var url.jupyterhub >}}/){.button target="_blank"}
+{{< include /training/common-slides/_log-in-with-jupyterhub.qmd >}}
 
 :::
-
-::: {.w-50-ns .tc}
-[Log in to {{< var vm.product >}}](https://app.prod.validmind.ai){.button target="_blank"}
-:::
-
-::::
-
-
-::: {.tc .f3}
-Be sure to return to this page afterwards.
-:::
-
-2. After you successfully log in, refresh the page to connect this training module up to the {{< var validmind.platform >}}: 
-
-::: {.tc}
-<button class="button" onClick="window.location.reload();">Refresh Page</button>
-
-:::
-
-
-:::
-
 
 <!-- USING THE VARIABLE IN THE HEADING MESSES UP THE PAGE ANCHOR -->
 
@@ -163,18 +133,7 @@ For now, **scroll through this notebook** to explore. When you are done, click [
 
 # Explore ValidMind tests {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## {background-iframe="/developer/model-testing/test-descriptions.html" background-interactive="true" data-preload="yes"}
-
-:::: {.slideover--l .three-quarters .auto-collapse-5}
-**{{< var vm.product >}} test repository**
-
-{{< var vm.product >}} provides a wealth out-of-the-box of tests to help you ensure that your model is being built appropriately.
-
-In this module, you'll become familiar with the individual tests available in {{< var vm.product >}}, as well as how to run them and change parameters as necessary.
-
-For now, **scroll through these test descriptions** to explore. When you're done, click [{{< fa chevron-right >}}]() to continue.
-
-::::
+{{< include /training/common-slides/_validmind-test-repository.qmd >}}
 
 {{< include /training/common-slides/_get-your-code-snippet.qmd >}}
 
