--- a/site/training/validator-fundamentals/developing-challenger-models.qmd
+++ b/site/training/validator-fundamentals/developing-challenger-models.qmd
@@ -106,35 +106,7 @@ Already logged in and refreshed this module? Click [{{< fa chevron-right >}}]() 
 
 :::
 
-### Log in
-
-1. Log in to check your access:
-
-:::: {.flex .flex-wrap .justify-around}
-
-::: {.w-50-ns .tc}
-
-[Log in to JupyterHub]({{< var url.jupyterhub >}}/){.button target="_blank"}
-
-:::
-
-::: {.w-50-ns .tc}
-[Log in to {{< var vm.product >}}](https://app.prod.validmind.ai){.button target="_blank"}
-:::
-
-::::
-
-
-::: {.tc .f3}
-Be sure to return to this page afterwards.
-:::
-
-2. After you successfully log in, refresh the page to connect this training module up to the {{< var validmind.platform >}}: 
-
-::: {.tc}
-<button class="button" onClick="window.location.reload();">Refresh Page</button>
-
-:::
+{{< include /training/common-slides/_log-in-with-jupyterhub.qmd >}}
 
 :::
 
@@ -464,44 +436,7 @@ This is the final notebook in our introductory series, which will walk you throu
 
 ::::
 
-## Retrieve your code snippet
-
-:::: {.columns}
-
-::: {.column width="80%"}
-
-<!-- FOR COPYING THE CODE SNIPPET WE NEED TO USE THIS IFRAME WORKAROUND -->
-
-<div style="zoom: 0.6; overflow: hidden;">
-  <iframe 
-    src="https://app.prod.validmind.ai/model-inventory" 
-    width="100%" 
-    height="750" 
-    style="border: 1px solid #083E44; border-radius: 8px; border-right-width: 2px; border-bottom-width: 3px;"
-    data-preload="yes" 
-    sandbox="allow-same-origin allow-scripts allow-popups allow-forms"
-    allow="clipboard-read; clipboard-write">
-  </iframe>
-</div>
-
-:::
-
-::: {.column width="20%"}
-
-::: {.f4}
-As usual, let's connect back up to your model in the {{< var validmind.platform >}}:
-
-1. Select the name of your model you registered for this course to open up the model details page.
-2. On the left sidebar that appears for your model, click **Getting Started**.
-3. Locate the code snippet and click **Copy snippet to clipboard**.
-
-:::
-
-:::
-
-::::
-
-When you're done, click [{{< fa chevron-right >}}]() to continue.
+{{< include /training/common-slides/_retrieve-your-code-snippet.qmd >}}
 
 ## {background-iframe="/notebooks/EXECUTED/model_validation/4-finalize_validation_reporting.html#initialize-the-validmind-library" data-preload="yes"}
 
