--- a/site/training/validator-fundamentals/finalizing-validation-reports.qmd
+++ b/site/training/validator-fundamentals/finalizing-validation-reports.qmd
@@ -106,25 +106,7 @@ Already logged in and refreshed this module? Click [{{< fa chevron-right >}}]() 
 
 :::
 
-### Log in
-
-1. Log in to check your access:
-
-::: {.tc}
-[Log in to {{< var vm.product >}}](https://app.prod.validmind.ai){.button target="_blank"}
-:::
-
-::: {.tc .f3}
-Be sure to return to this page afterwards.
-:::
-
-2. After you successfully log in, refresh the page to connect this training module up to the {{< var validmind.platform >}}: 
-
-::: {.tc}
-<button class="button" onClick="window.location.reload();">Refresh Page</button>
-
-:::
-
+{{< include /training/common-slides/_log-in.qmd >}}
 
 :::
 
