--- a/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
+++ b/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
@@ -71,39 +71,9 @@ Already logged in and refreshed this module? Click [{{< fa chevron-right >}}]() 
 :::
 
 
-### Log in
-
-1. Log in to check your access:
-
-:::: {.flex .flex-wrap .justify-around}
-
-::: {.w-50-ns .tc}
-
-[Log in to JupyterHub]({{< var url.jupyterhub >}}/){.button target="_blank"}
+{{< include /training/common-slides/_log-in-with-jupyterhub.qmd >}}
 
 :::
-
-::: {.w-50-ns .tc}
-[Log in to {{< var vm.product >}}](https://app.prod.validmind.ai){.button target="_blank"}
-:::
-
-::::
-
-
-::: {.tc .f3}
-Be sure to return to this page afterwards.
-:::
-
-2. After you successfully log in, refresh the page to connect this training module up to the {{< var validmind.platform >}}: 
-
-::: {.tc}
-<button class="button" onClick="window.location.reload();">Refresh Page</button>
-
-:::
-
-:::
-
-<br>
 
 <!-- USING THE VARIABLE IN THE HEADING MESSES UP THE PAGE ANCHOR -->
 
