--- a/site/guide/configuration/_add-model-stakeholder-types.qmd
+++ b/site/guide/configuration/_add-model-stakeholder-types.qmd
@@ -2,7 +2,7 @@
 :::: {.content-visible unless-format="revealjs"}
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
 
-1. Under User Permissions, select **Model Stakeholder Type**.
+1. Under User Permissions, select **Model Stakeholder Types**.
 
 1. Click **{{< fa plus >}} Add New Stakeholder Type**. 
 
@@ -15,7 +15,7 @@
 :::: {.content-hidden unless-format="revealjs"}
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-1. Under User Permissions, select **Model Stakeholder Type**.
+1. Under User Permissions, select **Model Stakeholder Types**.
 
 1. Click **{{< fa plus >}} Add New Stakeholder Type**.
 
