--- a/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
+++ b/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
@@ -223,7 +223,7 @@ Please note that the stock **Model Developer**, **Model Owner**, and **Model Val
 **Add a model stakeholder type**
 :::
 
-Under User Permissions, select **Model Stakeholder Type**:
+Under User Permissions, select **Model Stakeholder Types**:
 
 1. Click **{{< fa plus >}} Add New Stakeholder Type**.
 2. Enter the unique **[name]{.smallcaps}** and **[description]{.smallcaps}** for the stakeholder type.
