Renamed model lifecycle statuses

--- a/site/about/contributing/style-guide/conventions.qmd
+++ b/site/about/contributing/style-guide/conventions.qmd
@@ -172,7 +172,7 @@ Using a markdown button also enables you to link to to the `.qmd` path instead o
     <!-- FOOTNOTES -->
     [^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
-    [^2]: [Customize model lifecycle statuses](customize-model-lifecycle-statuses.qmd)
+    [^2]: [Manage model stages](manage-model-stages.qmd)
 
     [^3]: [Working with model workflows](set-up-model-workflows.qmd)
 
