--- a/site/guide/model-workflows/manage-model-stages.qmd
+++ b/site/guide/model-workflows/manage-model-stages.qmd
@@ -1,9 +1,10 @@
 ---
-title: "Customize model lifecycle statuses"
+title: "Manage model stages"
 date: last-modified
 aliases:
   - customize-resource-statuses.html
   - /guide/customize-resource-statuses.html
+  - customize-model-lifecycle-statuses.html
 ---
 
 Model lifecycle statuses are manipulated via workflow transitions and are used to track the progress of resources through your organization's processes. 
