--- a/site/guide/model-workflows/set-up-model-workflows.qmd
+++ b/site/guide/model-workflows/set-up-model-workflows.qmd
@@ -270,15 +270,15 @@ Approval steps need to be subsequently linked to both a [Rejected]{.bubble .red 
 
 <!-- FOOTNOTES -->
 
-[^1]: [Customize model lifecycle statuses](customize-model-lifecycle-statuses.qmd)
+[^1]: [Manage model stages](manage-model-stages.qmd)
 
 [^2]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^3]: [Customize model lifecycle statuses](customize-model-lifecycle-statuses.qmd)
+[^3]: [Manage model stages](manage-model-stages.qmd)
 
 [^4]: [Add conditional requirements](#add-conditional-requirements)
 
-[^5]: [Customize model lifecycle statuses](customize-model-lifecycle-statuses.qmd)
+[^5]: [Manage model stages](manage-model-stages.qmd)
 
 [^6]: [Add conditional requirements](#add-conditional-requirements)
 
