--- a/site/guide/model-workflows/working-with-model-workflows.qmd
+++ b/site/guide/model-workflows/working-with-model-workflows.qmd
@@ -9,7 +9,7 @@ listing:
     sort: false
     fields: [title, description]
     contents:
-    - customize-model-lifecycle-statuses.qmd
+    - manage-model-stages.qmd
     - set-up-model-workflows.qmd
 aliases:
   - /guide/working-with-model-workflows.html
@@ -78,7 +78,7 @@ If you need to reset your model's workflow to the beginning:
 
 [^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
-[^2]: [Customize model lifecycle statuses](customize-model-lifecycle-statuses.qmd)
+[^2]: [Manage model stages](manage-model-stages.qmd)
 
 [^3]: [Working with model workflows](set-up-model-workflows.qmd)
 
