--- a/site/releases/2024/2024-dec-06/release-notes.qmd
+++ b/site/releases/2024/2024-dec-06/release-notes.qmd
@@ -1074,7 +1074,7 @@ Model lifecycle statuses have been renamed in the {{< var validmind.platform >}}
 :::
 
 ::: {.w-40-ns .tr}
-[Customize model lifecycle statuses](/guide/model-workflows/customize-model-lifecycle-statuses.qmd){.button}
+[Manage model stages](/guide/model-workflows/manage-model-stages.qmd){.button}
 
 :::
 
