--- a/site/releases/2024/2024-sep-09/release-notes.qmd
+++ b/site/releases/2024/2024-sep-09/release-notes.qmd
@@ -109,7 +109,7 @@ Previously, we used resource statuses to refer to the model stages made availabl
 
 ::: {.w-40-ns .tc}
 
-[Customize model lifecycle statuses](/guide/model-workflows/customize-model-lifecycle-statuses.qmd){.button}
+[Manage model stages](/guide/model-workflows/manage-model-stages.qmd){.button}
 
 :::
 
