--- a/site/guide/model-workflows/manage-model-stages.qmd
+++ b/site/guide/model-workflows/manage-model-stages.qmd
@@ -7,50 +7,55 @@ aliases:
   - customize-model-lifecycle-statuses.html
 ---
 
-Model lifecycle statuses are manipulated via workflow transitions and are used to track the progress of resources through your organization's processes. 
+Model stages are manipulated via workflow transitions and are used to track the progress of models through your organization's model lifecycles.
 
-- Default statuses are provided for you as suggestions. 
-- You can add, edit, remove, and define your own custom statuses.
+- Default stages are provided for you as suggestions.
+- You can add, edit, remove, and define your own custom stages.
+
+::: {.callout}
+`Archived` and `Deleted` are [reserved]{.bubble} stages,[^1] meaning they cannot be modified or removed.
+:::
 
 ::: {.attn}
 
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-- [x] You are a [{{< fa hand >}} Customer Admin]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^1] 
+- [x] You are a [{{< fa hand >}} Customer Admin]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^2] 
 
 :::
 
-## Add or edit statuses
+## Add model stages
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Under Workplace Settings, select **{{< fa tower-broadcast >}} Model Lifecycle Statuses**:
+2. Under Models, select **Model Stages**:
 
-    - To add a status, click **{{< fa plus >}} Add New Model Lifecycle Status**.
-    - To edit a status, click on the status itself. 
+    - To add a stage, click **{{< fa plus >}} Add Model Stage**.
+    - To edit a stage, click on the stage itself.
 
-3. On the Add Model Lifecycle Status modal that appears:
+3. On the Add New Model Stage modal that appears:
 
-    a. Provide a status **[name]{.smallcaps}** 
-    b. Provide a status **[description]{.smallcaps}** 
-    c. Assign a **[color]{.smallcaps}** to the status
+    a. Provide a stage **[name]{.smallcaps}** 
+    b. Provide a stage **[description]{.smallcaps}** 
+    c. Assign a **[color]{.smallcaps}** to the stage
 
 4. When you are done, click **Save** to apply your changes.
 
-## Delete statuses
-
-::: {.callout-important title="Deleting statuses already in use will cause your workflows to no longer function correctly."}
- Make sure that the status you're deleting is not associated with any workflows or active models in your inventory before proceeding. 
-:::
+## Edit or delete stages
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Under Workplace Settings, select **Model Lifecycle Statuses**.
+2. Under Models, select **Model Stages**.
 
-3. Hover over the status you'd like to delete, and click **{{< fa trash-can >}} Delete**.
+3. Hover over the stage you'd like to modify until the **{{< fa ellipsis-vertical >}}** appears, then click on it:
 
-    On the confirmation dialogue that appears, select **OK** to confirm deletion.
+    - Select **{{< fa pencil >}} Edit Details** to modify that stage.
+    - Select **{{< fa trash-can >}} Delete Status**. On the confirmation dialogue that appears, select **OK** to confirm deletion.
+
+    ::: {.callout-important title="Deleting stages already in use will cause your workflows to no longer function correctly."}
+    Make sure that the stage you're deleting is not associated with any workflows or active models in your inventory before proceeding. 
+    :::
 
 ## What's next
 
@@ -60,5 +65,7 @@ Model lifecycle statuses are manipulated via workflow transitions and are used t
 
 <!-- FOOTNOTES -->
 
-[^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+[^1]: [Archive and delete models](/guide/model-inventory/archive-delete-models.qmd)
+
+[^2]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
