Working with model workflows > work with model workflows

--- a/site/about/overview-model-risk-management.qmd
+++ b/site/about/overview-model-risk-management.qmd
@@ -218,7 +218,7 @@ By integrating these features, {{< var vm.product >}} provides a comprehensive s
 
 [^2]: [Preparing validation reports](/guide/model-validation/preparing-validation-reports.qmd)
 
-[^3]: [Working with model workflows](/guide/model-workflows/working-with-model-workflows.qmd)
+[^3]: [Work with model workflows](/guide/model-workflows/work-with-model-workflows.qmd)
 
 [^4]: [Working with documentation templates](/guide/templates/working-with-documentation-templates.qmd)
 
