--- a/site/get-started/platform/explore-sample-model-documentation.qmd
+++ b/site/get-started/platform/explore-sample-model-documentation.qmd
@@ -95,7 +95,7 @@ Continue with [Register your first model](register-your-first-model.qmd) to lear
 
 [^1]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^2]: [Working with model workflows](/guide/model-workflows/working-with-model-workflows.qmd)
+[^2]: [Work with model workflows](/guide/model-workflows/work-with-model-workflows.qmd)
 
 [^3]: [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
 
