--- a/site/guide/model-inventory/view-model-activity.qmd
+++ b/site/guide/model-inventory/view-model-activity.qmd
@@ -75,7 +75,7 @@ Shows test results logged for your model via the {{< var validmind.developer >}}
 
 [^3]: [Collaborate with others (Commenting)](/guide/model-documentation/collaborate-with-others.qmd#commenting)
 
-[^4]: [Working with model workflows](/guide/model-workflows/working-with-model-workflows.qmd)
+[^4]: [Work with model workflows](/guide/model-workflows/work-with-model-workflows.qmd)
 
 [^5]: [Edit model inventory fields](/guide/model-inventory/edit-model-inventory-fields.qmd)
 
