--- a/site/guide/model-workflows/manage-model-stages.qmd
+++ b/site/guide/model-workflows/manage-model-stages.qmd
@@ -51,11 +51,11 @@ Model stages are manipulated via workflow transitions and are used to track the 
 3. Hover over the stage you'd like to modify until the **{{< fa ellipsis-vertical >}}** appears, then click on it:
 
     - Select **{{< fa pencil >}} Edit Details** to modify that stage.
-    - Select **{{< fa trash-can >}} Delete Status**. On the confirmation dialogue that appears, select **OK** to confirm deletion.
+    - Select **{{< fa trash-can >}} Delete Stage**. On the confirmation dialogue that appears, select **OK** to confirm deletion.
 
-    ::: {.callout-important title="Deleting stages already in use will cause your workflows to no longer function correctly."}
-    Make sure that the stage you're deleting is not associated with any workflows or active models in your inventory before proceeding. 
-    :::
+::: {.callout-important title="Deleting stages already in use will cause your workflows to no longer function correctly."}
+Make sure that the stage you're deleting is not associated with any workflows or active models in your inventory before proceeding. 
+:::
 
 ## What's next
 
