--- a/site/guide/model-workflows/work-with-model-workflows.qmd
+++ b/site/guide/model-workflows/work-with-model-workflows.qmd
@@ -13,6 +13,7 @@ listing:
     - set-up-model-workflows.qmd
 aliases:
   - /guide/working-with-model-workflows.html
+  - working-with-model-workflows.html
 ---
 
 Manage lifecycle processes within your {{< var validmind.platform >}} setup using workflows. Customize both your workflows and your lifecycle statuses to reflect the procedures within your organization. 
