--- a/site/guide/model-workflows/set-up-model-workflows.qmd
+++ b/site/guide/model-workflows/set-up-model-workflows.qmd
@@ -265,7 +265,7 @@ Approval steps need to be subsequently linked to both a [Rejected]{.bubble .red 
 ## What's next
 
 - [Workflows FAQ](/faq/faq-workflows.qmd)
-- [Working with workflows](working-with-model-workflows.qmd)
+- [Work with workflows](work-with-model-workflows.qmd)
 
 
 <!-- FOOTNOTES -->
