Set up model workflows > Configure custom workflows

--- a/site/guide/model-workflows/configure-custom-workflows.qmd
+++ b/site/guide/model-workflows/configure-custom-workflows.qmd
@@ -1,8 +1,9 @@
 ---
-title: "Set up model workflows"
+title: "Configure custom workflows"
 date: last-modified
 aliases:
   - /guide/set-up-model-workflows.html
+  - set-up-model-workflows.html
 ---
 
 <!-- A variant of this introductory section lives in training-for-administrators.qmd -->
