--- a/site/guide/model-workflows/setting-up-model-workflows.qmd
+++ b/site/guide/model-workflows/setting-up-model-workflows.qmd
@@ -10,5 +10,5 @@ listing:
     fields: [title, description]
     contents:
     - manage-model-stages.qmd
-    - set-up-model-workflows.qmd
+    - configure-custom-workflows.qmd
 ---
