--- a/site/guide/model-workflows/work-with-model-workflows.qmd
+++ b/site/guide/model-workflows/work-with-model-workflows.qmd
@@ -10,7 +10,7 @@ listing:
     fields: [title, description]
     contents:
     - manage-model-stages.qmd
-    - set-up-model-workflows.qmd
+    - configure-custom-workflows.qmd
 aliases:
   - /guide/working-with-model-workflows.html
   - working-with-model-workflows.html
@@ -81,7 +81,7 @@ If you need to reset your model's workflow to the beginning:
 
 [^2]: [Manage model stages](manage-model-stages.qmd)
 
-[^3]: [Working with model workflows](set-up-model-workflows.qmd)
+[^3]: [Working with model workflows](configure-custom-workflows.qmd)
 
 [^4]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
