--- a/site/guide/model-workflows/manage-model-stages.qmd
+++ b/site/guide/model-workflows/manage-model-stages.qmd
@@ -60,7 +60,7 @@ Make sure that the stage you're deleting is not associated with any workflows or
 ## What's next
 
 - [Workflows FAQ](/faq/faq-workflows.qmd)
-- [Set up model workflows](set-up-model-workflows.qmd)
+- [Set up model workflows](configure-custom-workflows.qmd)
 
 
 <!-- FOOTNOTES -->
