Setting up workflows WIP

--- a/site/guide/model-workflows/setting-up-model-workflows.qmd
+++ b/site/guide/model-workflows/setting-up-model-workflows.qmd
@@ -2,7 +2,7 @@
 title: "Setting up model workflows"
 date: last-modified
 listing:
-  - id: model-workflows-listing
+  - id: model-workflows
     type: grid
     grid-columns: 2
     max-description-length: 250
@@ -12,3 +12,19 @@ listing:
     - manage-model-stages.qmd
     - configure-custom-workflows.qmd
 ---
+
+Configure workflows to match your organizational needs for overseeing model development, validation, implementation, ongoing monitoring, auditing, or other risk management activities.
+
+Models in your model inventory transition through your organization's custom model lifecycles via model stages, which are in turn manipulated via workflows.
+
+## Set up workflows
+
+:::{#model-workflows}
+:::
+
+## Workflows reference guides
+
+### Available workflow step types
+
+### Manage workflow states
+
