--- a/site/guide/model-workflows/configure-custom-workflows.qmd
+++ b/site/guide/model-workflows/configure-custom-workflows.qmd
@@ -6,11 +6,11 @@ aliases:
   - set-up-model-workflows.html
 ---
 
-Workflows can be configured to match your organizational needs for overseeing model development, validation, or implementation activities.
+Configure workflows to match your organizational needs throughout your model lifecycles. Workflows can be as simple or as complex as required, with multiple and discrete workflows supported for unique triggers and scenarios.
 
 To set up a workflow, you'll need to complete these two steps in sequence:
 
- 1. [Configure the workflow steps](#configure-workflow-steps) 
+ 1. [Configure the workflow steps](#configure-workflow-steps)
  2. [Link the workflow together](#link-workflow-together)
 
 ::: {.attn}
@@ -18,11 +18,10 @@ To set up a workflow, you'll need to complete these two steps in sequence:
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-- [x] Model lifecycle statuses must be fully configured.[^1]
+- [x] Model stages must be fully configured.[^1]
 - [x] You are a [{{< fa hand >}} Customer Admin]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^2] 
 
 :::
-
 
 ## Configure workflow steps
 
@@ -40,7 +39,7 @@ Conditional requirements can be configured for all four available step types:
 | Condition Branch | Under each branch's **[conditions]{.smallcaps}**, you're able to designate the `AND` and `OR` conditions that apply to that path. |
 : Step type conditional options {.hover tbl-colwidths="[20,80]"}
 
-For Status Change[^17], User Action[^18], and Condition Branch[^19] conditions, you're able to add a single independent **Rule** or a linked condition **Group**. These rules and groups can be nested if desired:
+For Status Change[^3], User Action[^4], and Condition Branch[^5] conditions, you're able to add a single independent **Rule** or a linked condition **Group**. These rules and groups can be nested if desired:
 
 - Click **{{< fa plus >}} Rule** to add an independent rule.
 - Click **{{< fa plus >}} Group** to add a linked group of rules that all must be true to qualify. 
@@ -52,9 +51,9 @@ For Status Change[^17], User Action[^18], and Condition Branch[^19] conditions, 
 #### Link approval steps
 Approval steps need to be subsequently linked to both a [Rejected]{.bubble .red .red-bg} and an [Approved]{.bubble .green .green-bg} Status Change step:
 
-1. First, configure an **Approval** step.[^20]
+1. First, configure an **Approval** step.[^6]
 
-2. Then, drag two **Status Change** steps onto the canvas:[^21]
+2. Then, drag two **Status Change** steps onto the canvas:[^7]
 
     - Assign a `Rejected` status to one in the **Set Document Status** field.
     - Assign an `Approved` status to the other in the **Set Document Status** field.
@@ -98,43 +97,15 @@ Approval steps need to be subsequently linked to both a [Rejected]{.bubble .red 
 
 [^2]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^3]: [Manage model stages](manage-model-stages.qmd)
+[^3]: [Status Change](#status-change) steps
 
-[^4]: [Add conditional requirements](#add-conditional-requirements)
+[^4]: [User Action](#user-action) steps
 
-[^5]: [Manage model stages](manage-model-stages.qmd)
+[^5]: [Condition Branch](#condition-branch) steps
 
-[^6]: [Add conditional requirements](#add-conditional-requirements)
-
-[^7]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
-
-[^8]: [Manage roles](/guide/configuration/manage-roles.qmd)
-
-[^9]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
-
-[^10]: [Status Change](#status-change) steps
-
-[^11]: [Add conditional requirements](#add-conditional-requirements)
-
-[^12]: [Add conditional requirements](#add-conditional-requirements)
-
-[^13]: [Link steps together](#link-steps-together) 
-
-[^14]: [Approval](#approval) steps
-
-[^15]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)
-
-[^16]: Make model inventory fields **[required on registration]{.smallcaps}** to ensure necessary fields have valid values.
-
-[^17]: [Status Change](#status-change) steps
-
-[^18]: [User Action](#user-action) steps
-
-[^19]: [Condition Branch](#condition-branch) steps
-
-[^20]: 
+[^6]: 
 
     - [Configure workflow steps](#configure-workflow-steps)
     - [Approval](#approval) steps
 
-[^21]: [Status Change](#status-change) steps
+[^7]: [Status Change](#status-change) steps
