--- a/site/guide/model-workflows/manage-model-stages.qmd
+++ b/site/guide/model-workflows/manage-model-stages.qmd
@@ -7,13 +7,13 @@ aliases:
   - customize-model-lifecycle-statuses.html
 ---
 
-Model stages are manipulated via workflow transitions and are used to track the progress of models through your organization's model lifecycles.
+Configure the model stages available to the models in your model inventory. Model stages are manipulated via workflow transitions and are used to track the progress of models through your organization's model lifecycles.
 
 - Default stages are provided for you as suggestions.
 - You can add, edit, remove, and define your own custom stages.
 
 ::: {.callout}
-`Archived` and `Deleted` are [reserved]{.bubble} stages,[^1] meaning they cannot be modified or removed.
+`Archived` and `Deleted` are [Reserved]{.bubble} stages,[^1] meaning they cannot be modified or removed.
 :::
 
 ::: {.attn}
