--- a/site/guide/model-workflows/setting-up-model-workflows.qmd
+++ b/site/guide/model-workflows/setting-up-model-workflows.qmd
@@ -11,11 +11,25 @@ listing:
     contents:
     - manage-model-stages.qmd
     - configure-custom-workflows.qmd
+  - id: whats-next
+    type: grid
+    grid-columns: 2
+    max-description-length: 250
+    sort: false
+    fields: [title, description]
+    contents:
+    - work-with-model-workflows.qmd
 ---
 
 Configure workflows to match your organizational needs for overseeing model development, validation, implementation, ongoing monitoring, auditing, or other risk management activities.
 
-Models in your model inventory transition through your organization's custom model lifecycles via model stages, which are in turn manipulated via workflows.
+- Models in your model inventory transition through your organization's custom model lifecycles via model stages, which are in turn manipulated via workflows.
+- Workflows are comprised of workflow steps,[^1] and have their own states discrete from model stages.[^2]
+
+## Set up workflows
+
+:::{#model-workflows}
+:::
 
 ## Workflow elements
 
@@ -183,10 +197,42 @@ To configure a wait step, select when you would like to [resume workflow]{.small
 
 ### Workflow states
 
-## Set up workflows
+## What's next
 
-:::{#model-workflows}
+:::{#whats-next}
 :::
 
 
+<!-- FOOTNOTES -->
 
+[^1]: [Workflow step types](#workflow-step-types)
+
+[^2]: [Workflow states](#workflow-states)
+
+[^3]: [Manage model stages](manage-model-stages.qmd)
+
+[^4]: [Add conditional requirements](configure-custom-workflows.qmd#add-conditional-requirements)
+
+[^5]: [Manage model stages](manage-model-stages.qmd)
+
+[^6]: [Add conditional requirements](configure-custom-workflows.qmd#add-conditional-requirements)
+
+[^7]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
+
+[^8]: [Manage roles](/guide/configuration/manage-roles.qmd)
+
+[^9]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
+
+[^10]: [Status Change](#status-change) steps
+
+[^11]: [Add conditional requirements](configure-custom-workflows.qmd#add-conditional-requirements)
+
+[^12]: [Add conditional requirements](configure-custom-workflows.qmd#add-conditional-requirements)
+
+[^13]: [Link steps together](configure-custom-workflows.qmd#link-steps-together) 
+
+[^14]: [Approval](#approval) steps
+
+[^15]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)
+
+[^16]: Make model inventory fields **[required on registration]{.smallcaps}** to ensure necessary fields have valid values.
