--- a/site/guide/model-workflows/work-with-model-workflows.qmd
+++ b/site/guide/model-workflows/work-with-model-workflows.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Working with model workflows"
+title: "Work with model workflows"
 date: last-modified
 listing:
   - id: model-workflows-listing
