--- a/site/guide/configuration/manage-model-stakeholder-types.qmd
+++ b/site/guide/configuration/manage-model-stakeholder-types.qmd
@@ -28,7 +28,7 @@ Please note that the stock **Model Developer**, **Model Owner**, and **Model Val
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
 
-2. Under User Permissions, select **{{< fa users >}} Model Stakeholder Types**.
+2. Under Models, select **{{< fa users >}} Model Stakeholder Types**.
 
 3. Click **{{< fa plus >}} Add New Stakeholder Type**. 
 
