--- a/site/guide/model-workflows/configure-custom-workflows.qmd
+++ b/site/guide/model-workflows/configure-custom-workflows.qmd
@@ -23,11 +23,11 @@ To set up a workflow, you'll need to complete these two steps in sequence:
 
 :::
 
-## Configure workflow steps
+## Configure workflow steps*
 
 {{< include _configure-workflow-steps.qmd >}}
 
-### Add conditional requirements
+### Add conditional requirements*
 
 Conditional requirements can be configured for all four available step types:
 
@@ -44,11 +44,11 @@ For Status Change[^3], User Action[^4], and Condition Branch[^5] conditions, you
 - Click **{{< fa plus >}} Rule** to add an independent rule.
 - Click **{{< fa plus >}} Group** to add a linked group of rules that all must be true to qualify. 
 
-## Link workflow together
+## Link workflow together*
 
 {{< include _link-workflow-steps.qmd >}}
 
-#### Link approval steps
+#### Link approval steps*
 Approval steps need to be subsequently linked to both a [Rejected]{.bubble .red .red-bg} and an [Approved]{.bubble .green .green-bg} Status Change step:
 
 1. First, configure an **Approval** step.[^6]
@@ -65,7 +65,7 @@ Approval steps need to be subsequently linked to both a [Rejected]{.bubble .red 
 
 :::
 
-## Delete workflow steps
+## Delete workflow steps*
 
 1. Hover over the step until the **{{< fa ellipsis-vertical >}}** menu appears, then click on it.
 
@@ -75,7 +75,7 @@ Approval steps need to be subsequently linked to both a [Rejected]{.bubble .red 
 
 3. When you are finished, click **Save Workflow** to apply your changes.
 
-### Remove links between steps
+### Remove links between steps*
 
 1. Hover over a connection until the **{{< fa circle-xmark >}}** appears.
 
