--- a/site/guide/model-workflows/setting-up-model-workflows.qmd
+++ b/site/guide/model-workflows/setting-up-model-workflows.qmd
@@ -31,9 +31,9 @@ Configure workflows to match your organizational needs for overseeing model deve
 :::{#model-workflows}
 :::
 
-## Workflow elements
+## Workflow elements*
 
-### Workflow step types
+### Workflow step types*
 
 #### Status Change
 
@@ -195,7 +195,7 @@ To configure a wait step, select when you would like to [resume workflow]{.small
 | At Specified Date on Model Field | [model field]{.smallcaps}[^15] | Wait until a specific timestamp as defined by a valid `Date` or `Date Time` type model inventory field on a per model basis. If the selected field is empty[^16] or the milestone date inputted is in the past, the next workflow step will display immediately. |
 : **Wait** step configuration {.hover tbl-colwidths="[30,15,45]"}
 
-### Workflow states
+### Workflow states*
 
 ## What's next
 
