--- a/site/guide/model-workflows/work-with-model-workflows.qmd
+++ b/site/guide/model-workflows/work-with-model-workflows.qmd
@@ -16,7 +16,7 @@ aliases:
   - working-with-model-workflows.html
 ---
 
-Manage lifecycle processes within your {{< var validmind.platform >}} setup using workflows. Customize both your workflows and your lifecycle statuses to reflect the procedures within your organization. 
+View the status of a model in a workflow, and transition models into the appropriate workflow states.
 
 ::: {.attn}
 
@@ -24,21 +24,21 @@ Manage lifecycle processes within your {{< var validmind.platform >}} setup usin
 
 - [x] {{< var link.login >}}
 - [x] The model is registered in the model inventory.[^1]
-- [x] Model lifecycle statuses have already been customized for use in workflows.[^2]
+- [x] Model stages have already been customized for use in workflows.[^2]
 - [x] Workflows have already been set up for use with your models.[^3]
-- [x] You are a [{{< fa hand >}} Customer Admin]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^4] 
+- [x] You are a assigned role with sufficient permissions to transition the workflow into its next state.[^4] 
 
 :::
 
-## See workflow statuses
+## See workflow states*
 
-To review the overall workflow status for a model: 
+To review the overall workflow state for a model: 
 
 {{< include _model-workflows-see.qmd >}}
 
 ![Detailed workflow under the MODEL STATUS section](see-workflow.gif){fig-alt="A gif showing the detailed workflow under the MODEL STATUS section" .screenshot width=90%}
 
-## Transition workflow statuses
+## Transition workflow states*
 
 ::: {.callout-important title="Roles and action visibility"}
 Depending on the configuration of your workflows, you may or may not be able to move a model into another workflow state as actions can be gated to only users of certain roles. 
@@ -52,7 +52,7 @@ To transition the overall workflow status for a model:
 
 ![Transitioning a workflow status under the ACTIONS section](transition-workflow.gif){fig-alt="A gif showing transitioning a workflow status under the ACTIONS section" .screenshot width=90%}
 
-### Reset your model workflow
+### Reset your model workflow*
 
 If you need to reset your model's workflow to the beginning: 
 
