--- a/site/guide/model-inventory/manage-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/manage-model-inventory-fields.qmd
@@ -21,7 +21,7 @@ Create and edit the fields that appear on all models in your model inventory. Ch
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
 
-2. Under Models, select **{{< fa sliders >}} Inventory Fields**. Here you can edit existing inventory fields, or add a new one:
+2. Under Workspace Settings, select **{{< fa sliders >}} Inventory Fields**. Here you can edit existing inventory fields, or add a new one:
 
     - To add a new field, click **{{< fa plus >}} Add New Field**. 
     - To edit an existing field, select **{{< fa pencil >}} Edit** under the Actions column for the desired field.
@@ -125,7 +125,7 @@ For example, say you have numeric model inventory fields of `materiality` and `c
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
 
-2. Under Models, select **{{< fa sliders >}} Inventory Fields**. 
+2. Under Workspace Settings, select **{{< fa sliders >}} Inventory Fields**. 
 
 3. Select **{{< fa pencil >}} Edit** under the Actions column for the field you'd like to delete.
 
